--- a/clusters/staging/apps.yaml
+++ b/clusters/staging/apps.yaml
@@ -12,5 +12,5 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/staging/linkding
+  path: ./apps/staging
   prune: true
